--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -18,6 +18,14 @@
 .profile-img {
      border-radius: 50%;
      box-shadow: 1px 1px 3px;
+    width: 100px;
+    height: 100px;
+    align-items: center;
+    text-align: center;
+    margin-left: 50%;
+    left: -50px;
+    margin-top: 24px;
+    position: relative;
 }
 
 small, h3, p {
